# ai-research-assistant-assessment

./: .dockerignore  .env.example  .gitignore  Dockerfile  GETTING_STARTED.md  Makefile  README.md  docker-compose.yaml  pyproject.toml
evals/: cases.json  results.json  run.py
research_assistant/: audit.py  config.py  main.py
research_assistant/agent/: engine.py  prompts.py
research_assistant/core/: api.py  types.py
research_assistant/data_api/: analysis.py  guardrails.py  introspection.py  lookups.py
research_assistant/db/: schema.sql  seed.py  session.py
research_assistant/governance/: __init__.py  engine.py
research_assistant/governance/policies/: grounding.py  min_records.py  researcher_access.py
research_assistant/mcp_server/: server.py  tools.py
research_assistant/workflow/: client.py  routes.py
tests/: test_extraction.py  test_governance.py  test_guardrails.py
